fix(AV-1618): Fix expanders stylings and some spacings on guide menu

--- a/src/less/drupal/menu.less
+++ b/src/less/drupal/menu.less
@@ -22,7 +22,7 @@
     padding-left: @padding-left__nav--guide;
     margin-top: 0;
     margin-bottom: 0;
-    padding-top: @padding-y__nav__item__link--guide;
+    padding-top: 0;
     padding-bottom: @padding-y__nav__item__link--guide;
 
     &::before {
